- Добавлены тест-кейсы основного функционала - Переименованна сущность UserRole -> Roles - Добавлены XML-requests